# riack

./: .gitignore  README.md
cmake/: FindWOLFSSL.cmake
examples/mac osx/RiackExample/: AppDelegate.h  AppDelegate.m  RiackExample-Info.plist  main.m
examples/mac osx/RiackExample.xcodeproj/: project.pbxproj
examples/mac osx/RiackExample.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
examples/mac osx/RiackExample.xcodeproj/project.xcworkspace/xcuserdata/kaspar.xcuserdatad/: UserInterfaceState.xcuserstate
examples/mac osx/RiackExample.xcodeproj/xcuserdata/kaspar.xcuserdatad/xcschemes/: RiackExample.xcscheme  xcschememanagement.plist
examples/mac osx/RiackExample/RiackExample.xcdatamodeld/: .xccurrentversion
examples/mac osx/RiackExample/en.lproj/: MainMenu.xib
examples/mac osx/RiackExampleTests/: RiackExampleTests-Info.plist  RiackExampleTests.h  RiackExampleTests.m
examples/windows/Visual Studio 11/riackdemo/: README.md  RiackClient.cpp  RiackClient.h  RiackHelper.cpp  RiackHelper.h  riackdemo.cpp  riackdemo.sln  riackdemo.vcxproj  stdafx.cpp  stdafx.h
precompiled/: README.md
precompiled/linux/64bit/: riack_defines.h
precompiled/mac osx/intel 64bit/: libriack.dylib  riack.h  riack_defines.h
precompiled/windows/64bit debug/: riack.h  riack.lib
src/: CMakeLists.txt  ints.h  riack-config.h  riack-config.h.in  riack.c  riack.h  riack_2i.c  riack_cmd.c  riack_commands.c  riack_compat.h  riack_crdt.c  riack_defines.h  riack_helpers.c  riack_helpers.h  riack_internal.h  riack_kv.c  riack_mapreduce.c  riack_mem.c  riack_msg.c  riack_msg.h  riack_search.c  riack_sock.c  riack_sock.h  tests
src/google/protobuf-c/: README.md  protobuf-c.c  protobuf-c.h
src/protocol/: riak.pb-c.c  riak.pb-c.h  riak.proto  riak_dt.pb-c.c  riak_dt.pb-c.h  riak_kv.pb-c.c  riak_kv.pb-c.h  riak_kv.proto  riak_msg_codes.c  riak_msg_codes.h  riak_search.pb-c.c  riak_search.pb-c.h  riak_search.proto  riak_yokozuna.pb-c.c  riak_yokozuna.pb-c.h
src/tests/: test.c  test.h  test_2i.c  test_bucket.c  test_clientid.c  test_delete.c  test_get_put.c  test_load.c  test_mapred.c  test_mem.c  test_meta_links.c  test_misc.c  test_ping.c  test_search.c
src/testsrc/: test.c  test.h  test_2i.c  test_bucket.c  test_clientid.c  test_crdt.c  test_delete.c  test_ext_props.c  test_get_put.c  test_load.c  test_mapred.c  test_mem.c  test_meta_links.c  test_misc.c  test_search.c
testdata/: answers.json  comments.json  make_c_friendly.php  posts.json
testdata/c_friendly/: License.txt  answers.json.out  comments.json.out  posts.json.out
